Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2229

log spam: Not starting pre-election -- already a leader

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.6.0
    • 1.7.0
    • consensus
    • None

    Description

      A bug was introduced during the 1.6.0 development cycle that causes log spam by enabling the failure detector on the leader after a configuration change. That causes a lot of harmless (and useless) log messages. We'll fix this before releasing 1.6.0 and we'll never have a release with this log spam bug.

      Attachments

        Activity

          People

            mpercy Mike Percy
            mpercy Mike Percy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: